--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/7bc5b0d505.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
        
             <div class="navbar">
                  <ul class="main_nav">
